# bergain

./: .gitattributes  .gitignore  CLAUDE.md  GEPA_LEARNINGS.md  LICENSE  README.md  RLM_LESSONS.md  anderson.py  browse.py  compose.py  critique.py  goodnight.py  main.py  new-prompt.md  oneshot.py  prek.toml  pyproject.toml  session.py  spec.py  spec_data.py
.claude/: hookify.use-uv-not-python.local.md
.claude/plans/: reflective-twirling-turing.md
aesthetics/: app.py  pyproject.toml
bergain/: __init__.py  __main__.py  browse.py  cli.py  compose.py  eval.py  evolve.py  music.py  osc.py  progress.py  session.py  spec.py  spec_data.py  stub.py  tools.py  trainset.py  tui.py
palettes/curated/: palette_001.json  palette_002.json  palette_003.json  palette_004.json  palette_005.json  palette_006.json  palette_007.json  palette_008.json  palette_009.json  palette_010.json
prompts/: baseline.txt  fader_focus.txt  longer_phrases.txt  v3_wave_arc.txt  v4_timbral_depth.txt  v5_swap_curate.txt  v6_peak_movement.txt  v7_hypnotic_peak.txt  v8_smooth_peak.txt  v8b_tight_gains.txt  v8c_no_swap.txt
scripts/: e2e_compose.py  optimize_compose.py  optimize_prompts.py  parallel_dj.sh  score_gap_test.py  screen_palettes.py  validate_export.py
src/bergain/: arrangement.py  cli.py  dj.py  indexer.py  picker.py  recipe.py  renderer.py  streamer.py
tests/: test_compose.py  test_eval.py  test_evolve.py  test_tui.py
