[project]
name = "bergain"
version = "0.1.0"
description = "Recipe-based techno song builder"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "av>=16.1.0",
    "click>=8.0",
    "dspy-ai>=2.6",
    "litellm>=1.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.0",
    "scipy>=1.11",
    "sounddevice>=0.5",
]

[project.scripts]
bergain = "bergain.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bergain"]
