[project]
name = "bergain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "python-osc>=1.9.3",
    "requests>=2.32.5",
    "dspy>=2.6",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "textual>=1.0",
]

[project.scripts]
bergain = "bergain.cli:main"
bergain-browse = "bergain.browse:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bergain"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
